--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .idea/
-/bootstrap/cache
-/node_modules
-/public/hot
-/public/storage
-/storage
+bootstrap/cache/
+node_modules/
+public/hot/
+public/storage/
+storage/app/
+storage/framework/
+storage/logs/
+
 .DS_Store
 .*.swp
 .env
